новый апи ключ (старый скомпром)

--- a/DotaBotDiscord/Properties/launchSettings.json
+++ b/DotaBotDiscord/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "CyberUpBot": {
       "commandName": "Project",
-      "commandLineArgs": "NjM1ODI3MzMyNzExNTc5NjU4.Xa2ujg.dBGMiMEBu3qM6J4TgZUE5S7VJXQ"
+      "commandLineArgs": "NjM1ODI3MzMyNzExNTc5NjU4.Xhhlag.Jgt0C-YXMoOHXpuJkyaNB-P42sA"
     }
   }
 }
